--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.praktikumprogmob.Main2Activity">
+        tools:context="com.example.praktikumprogmob.MainActivity">
 
         <!--Header-->
         <RelativeLayout
@@ -28,14 +28,13 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/circle_border">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img_user"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
                     android:layout_margin="9dp"
-                    android:adjustViewBounds="true"
                     android:background="@drawable/circle"
                     android:padding="3dp"
-                    android:scaleType="centerInside"
                     android:src="@drawable/ic_user" />
 
             </RelativeLayout>
