--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -23,6 +23,7 @@
         android:id="@+id/welcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/branday2"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="35sp"
@@ -32,6 +33,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image"
         app:layout_constraintVertical_bias="0.09" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
